<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trip_list"
            android:icon="@drawable/carpool"
            android:title="@string/driver_trips" />
        <item
            android:id="@+id/nav_my_bids"
            android:icon="@drawable/mybidslogo"
            android:title="@string/my_bids" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/rating" />
        <item
            android:id="@+id/nav_switch_account"
            android:icon="@drawable/switchuserlogo"
            android:title="@string/switch_to_user" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logouticon"
            android:title="@string/logout" />
    </group>
</menu>