<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/driver_navigation"
    app:startDestination="@+id/nav_trip_list">

    <fragment
        android:id="@+id/nav_trip_list"
        android:name="com.bidridego.driver.DriverTripsListFragment"
        android:label="@string/driver_trips"
        tools:layout="@layout/recyclerview_list" />

    <fragment
        android:id="@+id/nav_my_bids"
        android:name="com.bidridego.ui.gallery.GalleryFragment"
        android:label="@string/my_bids"
        tools:layout="@layout/dummy_fragment_gallery" />

    <fragment
        android:id="@+id/nav_rating"
        android:name="com.bidridego.ui.slideshow.SlideshowFragment"
        android:label="@string/rating"
        tools:layout="@layout/dummy_fragment_slideshow" />
    <fragment
        android:id="@+id/nav_switch_account"
        android:name="com.bidridego.ui.slideshow.SlideshowFragment"
        android:label="@string/switch_to_user"
        tools:layout="@layout/dummy_fragment_slideshow" />
    <dialog
        android:id="@+id/dialog_switch_user"
        android:name="com.bidridego.driver.SwitchUserDialog"
        android:label="Switch User" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.bidridego.ui.slideshow.SlideshowFragment"
        android:label="@string/logout" />
    <action
        android:id="@+id/action_nav_switch_account"
        app:destination="@id/dialog_switch_user" />
</navigation>