<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#441972">
    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="400px"
        android:scaleType="fitXY"
        android:layout_alignParentStart="true"
        android:src="@drawable/banner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/banner"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:background="#F2F2F2"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/register_user"
                android:text="@string/signUp"
                style="@style/button"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/email"/>

                <EditText
                    android:id="@+id/email"
                    style="@style/editText"
                    android:inputType="textEmailAddress"
                    android:hint="@string/emailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/password"/>

                <EditText
                    android:id="@+id/password"
                    style="@style/editText"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:text="@string/login"
                android:id="@+id/login"
                style="@style/button" />

            <Button
                style="@style/button"
                android:text="@string/forgotPassword"
                app:backgroundTint="@color/golden"
                android:textColor="@color/blue"
                android:layout_marginTop="0dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>